--- a/Styles/accesoriosofertas.css
+++ b/Styles/accesoriosofertas.css
@@ -9,6 +9,7 @@
 }
 
 
+
 img {
     max-width: 100%;
     max-height: 100%;
@@ -25,26 +26,23 @@ header {
 
 .container-grid {  display: grid;
     grid-template-columns:  1fr 1fr 1fr;
-    grid-template-rows:  0.05fr 100% 1fr;
+    grid-template-rows:  0.05fr 70% 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
       "header header header"
       "main main main"
-      "seccionproductos ofertaproductos ofertaproductos"
+      "ofertaproductos ofertaproductos ofertaproductos"
       "footer footer footer";
   }
 
  header { grid-area: header; }
 
 .main { grid-area: main; }
-
-.seccionproductos { grid-area: seccionproductos ;}
   
 .ofertaproductos { grid-area: ofertaproductos; }
 
 .footer { grid-area: footer; }
-
 /* Fin Seccion General-Grids */
 
  /* Inicio de seccion navbar */
@@ -70,14 +68,13 @@ header {
     text-decoration: none !important;
     background-color:rgb(24, 192, 114);
     transition: all 0.3s ease-in 0.1s;
-    
 }
-
 
 
 #buttonnavbar {
     background-color:rgb(25, 209, 123); 
     border: black solid 0.15em; 
+    border-radius: 10%; 
     color:  rgb(0, 0, 0); 
     margin-right:3.50em;
 }
@@ -92,75 +89,44 @@ nav ul li i {
     font-size: 1.20em;
     padding-left: 10px;
     margin-left: 5px;
-    color: black;
+    color: rgb(0, 0, 0);
 }
-
 /* Final de seccion navbar */
 
-ul li a {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-}
-
-/* Inicio de seccion main */
-h1, h2, h3, h4, h5, h6 {
-    text-overflow: initial;
-    font-size: 1.50em;
-    font-weight: 600;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    list-style: none;
-}
-
-section#seccionmarcas {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.products {
-    color: rgb(25, 209, 123);
-    font-size: 4em;
-    font-weight: 600;
-    width: 50%;
-    margin-bottom: 20px;
-    border-bottom: 1px solid rgb(25, 209, 123);
-    padding-left: 3%;
-}
-
-.subtitle {
-    color: rgb(25, 209, 123);
-    font-size: 3em;
-    font-weight: 600;
-    padding: 3% !important;
-    
-}
-
-div.marcas {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 3em;
-    height: 400px;
-    width: 400px;
-    margin-top: 5%;
-}
-
-.navegar {
-    display: block;
-    flex-direction: column;
-    color: rgb(25, 209, 123);
+/* Inicio de seccion carousel */
+.carousel-item {
+    height: 60rem;
+    background: black;
+    color: white;
+    position: relative;
     font-size: 2em;
-    padding-left: 3%;
-    text-decoration: none;
+    font-weight: 700;
+    background-position: center;
+    background-size: cover;
 }
 
-.navegar:hover {
-    text-decoration: none;
-    padding-left: 4%;
-    transition: all 0.4s;
-    color: rgb(25, 209, 123);
+.overlay-image {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    top:0;
+    background-position: center;
+    background-size: cover;
+    opacity: 0.7;
 }
 
+.container {
+    position:absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    padding-bottom: 3em;
+}
+
+/* Fin de seccion Carousel */
+
+/* Seccion Ofertas */
 
 .ofertaproductos {
     width: 100%;
@@ -235,27 +201,81 @@ text-align: center;
 background-color: rgb(25, 209, 123) ;
 }
 
-.suscribir {
-font-size: 2.25em;
-color: rgb(0, 0, 0);
-border-top: solid rgb(0, 0, 0) ;
-text-align: center;
-background-color: rgb(25, 209, 123);
+.ofertasimage {
+    font-size: 3em;
+    text-align: center;
+    margin: auto;
+    background-image: url(https://images.samsung.com/is/image/samsung/assets/ar/explore/experience/ces2022/global0026_explore_ces2022_story-full-bleed_pc_1440x640.jpg?$ORIGIN_JPG$);
+    width: 1366px;
+    height: 607px;
+    background-repeat: no-repeat;
+    background-color: transparent;
 }
 
-.button {
-font-size: 0.50em ;
-background-color: rgb(25, 209, 123);
-border: outset rgb(0, 0, 0);
-border-radius: 0.30em;
-} 
-
-.button:hover {
-color:whitesmoke;
-background-color: rgb(22, 185, 109);
-transition: all 0.1s ease-in 0.1s;
+#textimage {
+    position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-48%, -50%);
 }
-/* Final de Seccion Main */
+
+
+
+
+#destacadosdelmes { 
+    position: relative;
+    width: 100%;
+    max-width: 1392px;
+    margin: 0 auto;
+    color: rgb(82, 183, 136);
+    font-size: 3em;
+    font-weight: 600;
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    max-height: calc(2.4em);
+    line-height: 1.2;
+    overflow: visible;
+    word-break: keep-all;
+    text-align: center;
+    text-overflow: clip;
+}
+
+.smartphones, .accesorios {
+    font-size: 3em;
+    text-align: center;
+    font-weight: 600;
+}
+
+.smartphones a:hover {
+    padding-left:  10px;
+    color:rgb(0, 0, 0) !important;
+    transition: all 0.3s;
+}
+
+.accesorios a:hover {
+    padding-left:  10px;
+    color: rgb(0, 0, 0) !important;
+    transition: all 0.3s;
+}
+ 
+/* Final Seccion Ofertas */
+
+/* Inicio Seccion Main */
+h1, h2, h3, h4, h5, h6 {
+    text-overflow: initial;
+    font-size: 1.50em;
+    font-weight: 600;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    list-style: none;
+}
+
+ul li a {
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
 
 
 /* Inicio de seccion footer */
@@ -345,12 +365,11 @@ ul {
     background-color: rgba(255, 255, 255, 0.2);
     line-height: 40px;
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: rgb(7, 34, 39);
     border-radius: 50%;
     box-sizing: content-box !important;
     transition: all 0.3s;
 }
-
 
 .copyright {
     font-size: 1.30em;
@@ -359,38 +378,39 @@ ul {
     font-weight:  300;
     background-color: rgb(25, 209, 123);
     text-align: center;
-    border-top: solid rgb(0, 0, 0);
+    border-top: solid rgb(7, 34, 39);
 }
 /* Final de seccion footer */
 
-/* Seccion ed Mediaqueries */
+/* Seccion Queries Ofertas*/    
+
+
 
 /* footer responsive */
+/* Footer Responsive */
 @media (max-width: 1024px) { 
     .containerfooter_row_col {
         width: 50%;
         margin-bottom: 30px;
     }
+
 }
 
-@media (max-width: 950px) {
-    .footer {
-        margin-top: 5em;
-    }
-}
-
-@media (max-width: 610px) { 
+@media (max-width: 768px) { 
     .containerfooter_row_col {
         width: 100%;
         margin-bottom: 30px;
     }
-    .footer {
-        margin-top: 25em;
+    footer {
+        margin-top: 5em;
     }
+}
 
-}
-@media (max-width: 608px) {
-    .footer {
-        margin-top: 55em;
+@media (max-width: 610px) {
+    footer {
+        margin-top: 30em;
     }
 }
+
+
+/* Final Seccion Queries Ofertas*/    
