--- a/Styles/sobrenosotros.css
+++ b/Styles/sobrenosotros.css
@@ -27,8 +27,8 @@ header {
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
-  -ms-grid-rows: 0.05fr 5fr 1fr;
-      grid-template-rows: 0.05fr 5fr 1fr;
+  -ms-grid-rows: 0.05fr 80% 1fr;
+      grid-template-rows: 0.05fr 80% 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
       grid-template-areas: "header header header" "main main main" "containernosotros containernosotros containernosotros " "footer footer footer";
@@ -85,7 +85,6 @@ header {
   background-color: #18c072;
   -webkit-transition: all 0.3s ease-in 0.1s;
   transition: all 0.3s ease-in 0.1s;
-  color: #ececec !important;
 }
 
 #buttonnavbar {
@@ -280,26 +279,15 @@ ul {
   border-top: solid black;
 }
 
-/* Seccion Queries nosotros*/
-@media screen and (max-width: 700px) {
-  .container-grid {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 1fr 1fr;
-        grid-template-columns: 1fr 1fr 1fr;
-    -ms-grid-rows: 0.05fr 5.20fr 1fr;
-        grid-template-rows: 0.05fr 5.20fr 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-        grid-template-areas: "header header header" "main main main" "containernosotros containernosotros containernosotros " "footer footer footer";
-  }
-}
-
 /* footer responsive */
 @media (max-width: 767px) {
   .containerfooter_row_col {
     width: 50%;
     margin-bottom: 30px;
+  }
+  .container-grid {
+    -ms-grid-rows: 0.05fr 70% 1fr;
+        grid-template-rows: 0.05fr 70% 1fr;
   }
 }
 
@@ -307,6 +295,22 @@ ul {
   .containerfooter_row_col {
     width: 100%;
     margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 485px) {
+  .imagennosotros {
+    font-size: 1.50em;
+  }
+  .textonosotros {
+    font-size: 1.50em;
+  }
+  .imagennosotros_texto_2 {
+    font-size: 1.50em;
+  }
+  .container-grid {
+    -ms-grid-rows: 0.05fr 50% 1fr;
+        grid-template-rows: 0.05fr 50% 1fr;
   }
 }
 /*# sourceMappingURL=sobrenosotros.css.map */
