--- a/Styles/compras.css
+++ b/Styles/compras.css
@@ -9,42 +9,47 @@
 }
 
 
+
 img {
     max-width: 100%;
     max-height: 100%;
 }
 
-.img-fluid {
-    width: 100%;
-    height: auto;
-}
 
 header {
     display: flex;
 }
 
+body {
+    background: url(../Multimedia/Proximamente.png);
+    content:'';
+   position: absolute;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+   background-size: cover;
+   z-index: -1;
+}
+
 .container-grid {  display: grid;
     grid-template-columns:  1fr 1fr 1fr;
-    grid-template-rows:  0.05fr 90% 1fr;
+    grid-template-rows:  0.05fr 225% 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
       "header header header"
       "main main main"
-      "seccionproductos ofertaproductos ofertaproductos"
       "footer footer footer";
   }
 
  header { grid-area: header; }
 
 .main { grid-area: main; }
-
-.seccionproductos { grid-area: seccionproductos ;}
   
 .ofertaproductos { grid-area: ofertaproductos; }
 
 .footer { grid-area: footer; }
-
 /* Fin Seccion General-Grids */
 
  /* Inicio de seccion navbar */
@@ -70,14 +75,13 @@ header {
     text-decoration: none !important;
     background-color:rgb(24, 192, 114);
     transition: all 0.3s ease-in 0.1s;
-    
 }
-
 
 
 #buttonnavbar {
     background-color:rgb(25, 209, 123); 
     border: black solid 0.15em; 
+    border-radius: 10%; 
     color:  rgb(0, 0, 0); 
     margin-right:3.50em;
 }
@@ -92,17 +96,12 @@ nav ul li i {
     font-size: 1.20em;
     padding-left: 10px;
     margin-left: 5px;
-    color: black;
-}
-
-/* Final de seccion navbar */
-
-ul li a {
-    text-decoration: none;
     color: rgb(0, 0, 0);
 }
+/* Final de seccion navbar */
 
-/* Inicio de seccion main */
+
+/* Inicio Seccion Main */
 h1, h2, h3, h4, h5, h6 {
     text-overflow: initial;
     font-size: 1.50em;
@@ -112,149 +111,10 @@ h1, h2, h3, h4, h5, h6 {
     list-style: none;
 }
 
-section#seccionmarcas {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.products {
-    color: rgb(25, 209, 123);
-    font-size: 4em;
-    font-weight: 600;
-    width: 50%;
-    margin-bottom: 20px;
-    border-bottom: 1px solid rgb(25, 209, 123);
-    padding-left: 3%;
-}
-
-.subtitle {
-    color: rgb(25, 209, 123);
-    font-size: 3em;
-    font-weight: 600;
-    padding: 3% !important;
-}
-
-div.marcas {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 3em;
-    height: 400px;
-    width: 400px;
-    margin-top: 5%;
-}
-
-.navegar {
-    display: block;
-    flex-direction: column;
-    color: rgb(25, 209, 123);
-    font-size: 2em;
-    padding-left: 3%;
+ul li a {
     text-decoration: none;
+    color: rgb(0, 0, 0);
 }
-
-.navegar:hover {
-    text-decoration: none;
-    padding-left: 4%;
-    transition: all 0.4s;
-    color: rgb(25, 209, 123);
-}
-
-
-.ofertaproductos {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-.productcard {
-    margin-top: 2%;
-    margin-right: 2%;
-    margin-left: 2%;
-}
-
-.ofertaproductos .productcard {
-width: 280px;
-margin-bottom: 20px;
-overflow: hidden;
-border: 0.20em solid rgb(25, 209, 123);
-border-radius: 1em;
-box-shadow: 0 0 10px rgb(116, 115, 115);
-text-align: center;
-}
-
-.ofertaproductos .productcard .product-image {
-height:  450px;
-width: 250px;
-margin: 10px auto;
-}
-
-.ofertaproductos .productcard .product-image img {
-width: 100%;
-}
-
-.ofertaproductos .productcard .product-image img:hover {
-transform: scale(1.05);
-transition: 0.4s;
-}
-
-.ofertaproductos .productcard .product-info strong {
-font-size: 1.35em;
-padding: 0 0 0 20px;
-margin-bottom: 10px;
-}
-
-.ofertaproductos .productcard .productbtn {
-width: 100%;
-}
-
-.ofertaproductos .productcard .productbtn button {
-width: 100%;
-padding: 5px;
-background-color: rgb(25, 209, 123);
-border: none;
-outline: none;
-color: rgb(252, 239, 239);
-cursor: pointer;
-font-size: 1.35em;
-border-radius: 0 0 10px 10px;
-}
-
-.ofertaproductos .productcard .productbtn button:hover {
-background-color: rgb(22, 182, 107);
-transition: 0.3s;
-}
-
-#ofertaindex {
-text-align: center;
-background-color: rgb(25, 209, 123) ;
-}
-
-.suscribir {
-font-size: 2.25em;
-color: rgb(0, 0, 0);
-border-top: solid rgb(0, 0, 0) ;
-text-align: center;
-background-color: rgb(25, 209, 123);
-}
-
-.button {
-font-size: 0.50em ;
-background-color: rgb(25, 209, 123);
-border: outset rgb(0, 0, 0);
-border-radius: 0.30em;
-} 
-
-.button:hover {
-color:whitesmoke;
-background-color: rgb(22, 185, 109);
-transition: all 0.1s ease-in 0.1s;
-}
-/* Final de Seccion Main */
 
 
 /* Inicio de seccion footer */
@@ -344,12 +204,11 @@ ul {
     background-color: rgba(255, 255, 255, 0.2);
     line-height: 40px;
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: rgb(7, 34, 39);
     border-radius: 50%;
     box-sizing: content-box !important;
     transition: all 0.3s;
 }
-
 
 .copyright {
     font-size: 1.30em;
@@ -358,35 +217,27 @@ ul {
     font-weight:  300;
     background-color: rgb(25, 209, 123);
     text-align: center;
-    border-top: solid rgb(0, 0, 0);
+    border-top: solid rgb(7, 34, 39);
 }
 /* Final de seccion footer */
 
-/* Seccion ed Mediaqueries */
+/* Seccion Queries Ofertas*/    
 
-/* footer responsive */
+/* Footer Responsive */
 @media (max-width: 1024px) { 
     .containerfooter_row_col {
         width: 50%;
         margin-bottom: 30px;
     }
-    .footer {
-        margin-top: 10em;
-    }
 }
 
-@media (max-width: 610px) {
-    .footer {
-        margin-top: 14em;
-    } 
-}
-
-@media (max-width: 610px) { 
+@media (max-width: 768px) { 
     .containerfooter_row_col {
         width: 100%;
         margin-bottom: 30px;
     }
-    .footer {
-        margin-top: 24em;
-    }
 }
+
+
+
+/* Final Seccion Queries Ofertas*/    
